fixed crawler's name

--- a/fmc/config/fmc_web_scraper.yml
+++ b/fmc/config/fmc_web_scraper.yml
@@ -1,7 +1,7 @@
 # Scraper for the OCCRP web site.
 # The goal is not to download all HTML, but only PDFs & other documents
 # linked from the page as proof.
-name: occrp_web_site
+name: fmc
 
 # A title for display in the UI:
 description: 'FMC Organization'
